--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">RemoteCommand</string>
+    <string name="app_name">rem0tecmd</string>
     <string name="default_port">5000</string>
     <string name="default_address">localhost</string>
     <string name="shared_pref_file">sharedprefs</string>
